chore(grails3-support): increase max perm size for testing