@@ -76,3 +76,7 @@ publishing {
     }
   }
 }
+
+integrationTest {
+  jvmArgs "-XX:MaxPermSize=256m"
+}
